<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_layout"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:text="Cars App (Zixin Hao)"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="69dp"
        android:layout_height="35dp"
        android:text="@string/Text_view_Maker"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="69dp"
        android:layout_height="35dp"
        android:text="@string/Text_view_Model"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <EditText
        android:id="@+id/Year"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:ems="10"

        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/guideline6" />

    <EditText
        android:id="@+id/Maker"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/guideline6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="69dp"
        android:layout_height="35dp"
        android:text="@string/Text_view_Year"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="69dp"
        android:layout_height="35dp"
        android:text="@string/Text_view_Color"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="69dp"
        android:layout_height="35dp"
        android:text="@string/Text_view_Seats"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="69dp"
        android:layout_height="35dp"
        android:text="@string/Text_view_Price"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <EditText
        android:id="@+id/Model"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/guideline6" />

    <EditText
        android:id="@+id/Color"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/guideline6" />

    <EditText
        android:id="@+id/Seats"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:ems="10"

        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/guideline6" />

    <EditText
        android:id="@+id/Price"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:ems="10"

        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/guideline6" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="77dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="122dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="85dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="164dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="211dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="258dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="310dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="365dp" />


</androidx.constraintlayout.widget.ConstraintLayout>